<resources>
    <string name="app_name">ToDoNotes</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="welcome">ToDo Notes !</string>
    <string name="add_note">Add Note</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed !</string>
    <string name="delete">Delete</string>
    <string name="ok">ok</string>
    <string name="choose_from">Choose From :</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="to_do_notes">To Do Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="your_to_do_notes_app">Your To Do Notes App</string>
    <string name="create_and_manage_your_notes">Create and Manage your Notes</string>
    <string name="add_images_to_your_notes">Add Images to your Notes</string>
    <string name="choose_images_from_camera_or_gallery">Choose Images from Camera or Gallery</string>
</resources>
